--- a/index.html
+++ b/index.html
@@ -17,18 +17,14 @@
 </head>
 
 <body>
-  <!--Author    : Wafa Rifki Anafin-->
-  <!--Facebook  : https://facebook.com/wafarifkianafin-->
-  <!--Instagram : https://instagram.com/wafarifki_-->
-  <!--Website   : https://wafarifki.tk-->
   <div class="kontener2" id="kontener2">
-    <h1>Hai Sayang</h1>
+    <h1>Hai Cece Ayu</h1>
     <button class="tombol" id="tombol">Mulai Sekarang</button>
   </div>
 
   <div class="kontener" id="kontener">
     <div class="dalemnya_kontener">
-      <h1 class="judul_halaman">I Love You</h1>
+      <h1 class="judul_halaman">For Ayu Wulandari</h1>
       <a class="tombol_menu" onclick="klikMenu()"></a>
       <section class="halaman1 dalemnya_halaman" onclick="PindahKeHalaman(0)">
         <h1 class="judul_halaman">Aku</h1>
