--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Love You</title>
-  <meta name="description" content="Semangat beraktifitas ya sayang">
+  <meta name="description" content="Semangat beraktifitas ya Cece">
   <meta name="author" content="Wafa Rifqi Anafin">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/efekteks.css">
@@ -37,7 +37,7 @@
         </div>
       </section>
       <section class="halaman2 dalemnya_halaman" onclick="PindahKeHalaman(1)">
-        <h1 class="judul_halaman">Sayang</h1>
+        <h1 class="judul_halaman">Cece</h1>
         <br>
         <img src="gambar/gambar2.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
         <br>
@@ -58,7 +58,7 @@
         </div>
       </section>
       <section class="halaman4 dalemnya_halaman" onclick="PindahKeHalaman(3)">
-        <h1 class="judul_halaman">Anisa Aulia</h1>
+        <h1 class="judul_halaman">Ayu Wulandari</h1>
         <br>
         <h1 id="waktu"></h1>
         <script type="text/javascript">
@@ -67,19 +67,19 @@
           var jam = hari.getHours();
           if (jam >= 0 && jam < 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Pagi Sayang!</h1><p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat hanya kamu. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Pagi Ce!</h1><p class='isiucapan'>Saat aku membuka mata setiap harinya, yang ingin aku lihat hanya kamu. i love you Cece <3<p>"
             );
           } else if (jam == 12) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Sayang!</h1><p class='isiucapan'>Jangan Lupa Makan Yaa Sayang. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Ce!</h1><p class='isiucapan'>Jangan Lupa Makan Yaa Ce. i love you Cece <3<p>"
             );
           } else if (jam >= 12 && jam <= 17) {
             document.write(
-              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Sayang!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya sayang. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Siang Menjelang Sore Cece!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya Cece. i love you Cece <3<p>"
             );
           } else {
             document.write(
-              "<h1 class='ucapan'>Selamat Malam Sayang!</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. i love you sayang <3<p>"
+              "<h1 class='ucapan'>Selamat Malam Cece!</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. i love you Cece <3<p>"
             );
           }
           document.write("</center>");
