--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="kontener" id="kontener">
     <div class="dalemnya_kontener">
-      <h1 class="judul_halaman">For Ayu Wulandari</h1>
+      <h1 class="judul_halaman">Ayu Wulandari</h1>
       <a class="tombol_menu" onclick="klikMenu()"></a>
       <section class="halaman1 dalemnya_halaman" onclick="PindahKeHalaman(0)">
         <h1 class="judul_halaman">Aku</h1>
@@ -37,7 +37,7 @@
         </div>
       </section>
       <section class="halaman2 dalemnya_halaman" onclick="PindahKeHalaman(1)">
-        <h1 class="judul_halaman">Cece</h1>
+        <h1 class="judul_halaman">Sayang</h1>
         <br>
         <img src="gambar/gambar2.jpg" alt="Web Bucin Html, Css, Js" class="gambar">
         <br>
